# multi-agent-coding-tool

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
src/: __init__.py  main.py
src/agents/: __init__.py  coder.py  deployer.py  improver.py  planner.py  reviewer.py  test_runner.py  tester.py
src/core/: __init__.py  config.py  mock_llm.py  models.py  pipeline.py
src/tools/: __init__.py  code_executor.py  file_writer.py
