[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-software-factory"
version = "0.1.0"
description = "AI Software Factory - Multiple specialized agents collaborating like a real engineering team"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.86.0",
    "crewai-tools>=0.17.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ai-factory = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
